--- a/01_simple_LKM/Makefile
+++ b/01_simple_LKM/Makefile
@@ -1,8 +1,8 @@
 obj-m += mymodule.o
 
 all:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+	make -C /lib/modules/$$(uname -r)/build M=$(PWD) modules
 
 clean:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
+	make -C /lib/modules/$$(uname -r)/build M=$(PWD) clean
 	
