fixed example 3 for change to create_class API

--- a/02_dev_nr/Makefile
+++ b/02_dev_nr/Makefile
@@ -1,8 +1,15 @@
 obj-m += dev_nr.o
 
 all:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+	make -C /lib/modules/$$(uname -r)/build M=$(PWD) modules
+	sudo mknod /dev/mydevice c 64 0
+	sudo insmod dev_nr.ko
+
+run:
+	./test
 
 clean:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
-	
+	sudo rmmod dev_nr.ko
+	sudo rm /dev/mydevice
+	make -C /lib/modules/$$(uname -r)/build M=$(PWD) clean
+	rm -f test	
