--- a/03_read_write/Makefile
+++ b/03_read_write/Makefile
@@ -1,8 +1,10 @@
 obj-m += read_write.o
 
 all:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+	make -C /lib/modules/$$(uname -r)/build M=$(PWD) modules
+	sudo insmod read_write.ko
 
 clean:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
+	sudo rmmod read_write.ko
+	make -C /lib/modules/$$(uname -r)/build M=$(PWD) clean
 	
